fix: forhindre clipping av siste diamant i små knapper
affects: @fremtind/jkl-loader

--- a/packages/loader/loader.scss
+++ b/packages/loader/loader.scss
@@ -7,7 +7,7 @@ $loader-dot-size: rem(18px);
 $loader-dot-size--inline: rem(7px);
 $loader-dot-size--inline-compact: rem(5px);
 $loader-spacing: $component-spacing--xxl;
-$loader-spacing--inline: $component-spacing--large;
+$loader-spacing--inline: $component-spacing--medium;
 $loader-spacing--inline-compact: $component-spacing--small;
 $loader-animation-properties: 2500ms linear infinite;
 
